--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html lang="cs">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kohouti: Krásné druhy</title>
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -71,67 +66,67 @@
 
 <div class="container">
     <div class="card">
-        <img src="https://www.example.com/kohout1.jpg" alt="Kohout 1">
+        <img src="https://example.com/araucanakohout.jpg" alt="Kohout Araucana">
         <h3>Kohout Araucana</h3>
         <p>Kohout Araucana je známý pro svou modrou barvu vajec a výrazný vzhled.</p>
     </div>
     <div class="card">
-        <img src="https://www.example.com/kohout2.jpg" alt="Kohout 2">
+        <img src="https://example.com/plymouthrockkohout.jpg" alt="Kohout Plymouth Rock">
         <h3>Kohout Plymouth Rock</h3>
         <p>Plymouth Rock je oblíbený pro svou odolnost a krásné zbarvení peří.</p>
     </div>
     <div class="card">
-        <img src="https://www.example.com/kohout3.jpg" alt="Kohout 3">
+        <img src="https://example.com/rhodeislandredkohout.jpg" alt="Kohout Rhode Island Red">
         <h3>Kohout Rhode Island Red</h3>
         <p>Tento kohout je velmi populární pro svou vysokou produkci vajec a krásné, tmavě červené peří.</p>
     </div>
     <div class="card">
-        <img src="https://www.example.com/kohout4.jpg" alt="Kohout 4">
+        <img src="https://example.com/leghornkohout.jpg" alt="Kohout Leghorn">
         <h3>Kohout Leghorn</h3>
         <p>Leghorn je známý svou vysokou aktivitou a bílými peřími.</p>
     </div>
     <div class="card">
-        <img src="https://www.example.com/kohout5.jpg" alt="Kohout 5">
+        <img src="https://example.com/sussexxkohout.jpg" alt="Kohout Sussex">
         <h3>Kohout Sussex</h3>
         <p>Sussex je skvělý pro venkovské farmy, díky své mírné povaze a nádhernému hnědému peří.</p>
     </div>
     <div class="card">
-        <img src="https://www.example.com/kohout6.jpg" alt="Kohout 6">
+        <img src="https://example.com/orpingtonkohout.jpg" alt="Kohout Orpington">
         <h3>Kohout Orpington</h3>
         <p>Orpington je známý pro své silné tělo a lesklé černé nebo modré peří.</p>
     </div>
     <div class="card">
-        <img src="https://www.example.com/kohout7.jpg" alt="Kohout 7">
+        <img src="https://example.com/cochinkohout.jpg" alt="Kohout Cochins">
         <h3>Kohout Cochins</h3>
         <p>Cochin je známý pro své okouzlující, huňaté peří a klidnou povahu.</p>
     </div>
     <div class="card">
-        <img src="https://www.example.com/kohout8.jpg" alt="Kohout 8">
+        <img src="https://example.com/dorkingkohout.jpg" alt="Kohout Dorking">
         <h3>Kohout Dorking</h3>
         <p>Kohout Dorking je starý britský druh, který se vyznačuje silnou kostrou a bílým peřím.</p>
     </div>
     <div class="card">
-        <img src="https://www.example.com/kohout9.jpg" alt="Kohout 9">
+        <img src="https://example.com/silkiekohout.jpg" alt="Kohout Silkie">
         <h3>Kohout Silkie</h3>
         <p>Silkie je malý, ale velmi milý kohout, který je známý pro své hebké, hedvábné peří.</p>
     </div>
     <div class="card">
-        <img src="https://www.example.com/kohout10.jpg" alt="Kohout 10">
+        <img src="https://example.com/andaluskokohout.jpg" alt="Kohout Andaluský">
         <h3>Kohout Andaluský</h3>
         <p>Andaluský kohout má nádherný modro-černý vzhled a je považován za jednu z nejkrásnějších ras.</p>
     </div>
     <div class="card">
-        <img src="https://www.example.com/kohout11.jpg" alt="Kohout 11">
+        <img src="https://example.com/faverollekohout.jpg" alt="Kohout Faverolle">
         <h3>Kohout Faverolle</h3>
         <p>Faverolle je nejen krásný, ale také velmi přátelský, což z něj činí ideálního domácího mazlíčka.</p>
     </div>
     <div class="card">
-        <img src="https://www.example.com/kohout12.jpg" alt="Kohout 12">
+        <img src="https://example.com/hamburgkohout.jpg" alt="Kohout Hamburg">
         <h3>Kohout Hamburg</h3>
         <p>Hamburg je starý evropský druh, známý svou vytrvalostí a schopností přežít v náročných podmínkách.</p>
     </div>
     <div class="card">
-        <img src="https://www.example.com/kohout13.jpg" alt="Kohout 13">
+        <img src="https://example.com/yokohamakohout.jpg" alt="Kohout Yokohama">
         <h3>Kohout Yokohama</h3>
         <p>Kohout Yokohama je známý pro své dlouhé, elegantní peří a nádherný vzhled.</p>
     </div>
